@@ -4,6 +4,7 @@
 - Returned Hard Floor Image to all screens except Home
 - Add Option to Auto Hide Home Submenus
 - Add Option to Hide System Power Button
+- Added User Watched/New Banner Option to Poster View
 
 [B]1.0.3[/B]
 - Added Info Stats Bar
